# arrow-wasm

./: Cargo.toml  LICENSE  README.md  test.sh
.cargo/: config.toml
extended-functionality/: compute.wit.extended  lib.rs.extended
src/: bindings.rs  lib.rs
wit/: arrays.wit  compute.wit  flight.wit  io.wit  record-batch.wit  types.wit  world.wit
