[package]
name = "arrow-wasm"
version = "0.1.0"
edition = "2021"
description = "Apache Arrow as a WebAssembly Component"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core Arrow crates
arrow = { version = "57.2", default-features = false, features = [
    "ipc",
    "json",
    "csv",
] }
arrow-array = { version = "57.2", default-features = false }
arrow-buffer = { version = "57.2", default-features = false }
arrow-cast = { version = "57.2", default-features = false }
arrow-data = { version = "57.2", default-features = false }
arrow-ipc = { version = "57.2", default-features = false }
arrow-json = { version = "57.2", default-features = false }
arrow-csv = { version = "57.2", default-features = false }
arrow-ord = { version = "57.2", default-features = false }
arrow-row = { version = "57.2", default-features = false }
arrow-schema = { version = "57.2", default-features = false }
arrow-select = { version = "57.2", default-features = false }
arrow-string = { version = "57.2", default-features = false }
arrow-arith = { version = "57.2", default-features = false }
arrow-avro = { version = "57.2", default-features = false }

# Parquet support - pure Rust compression codecs
parquet = { version = "57.2", default-features = false, features = [
    "arrow",
    "snap",               # Pure Rust snappy implementation
    "lz4",                # Uses lz4_flex which is pure Rust
    "flate2",             # Gzip support
    "flate2-rust_backened",  # Use pure Rust miniz_oxide backend (note: typo in feature name is intentional)
] }

# Bytes for Parquet ChunkReader
bytes = "1.5"

# Base64 encoding/decoding
base64 = "0.22"

# Regex support for string operations
regex = "1.10"

# Numeric traits for gcd/lcm
num-traits = "0.2"

# Component model bindings (compatible with Wasmtime 40.x)
wit-bindgen = "0.51"
wit-bindgen-rt = "0.44"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[package.metadata.component]
package = "arrow:arrow-wasm"

[package.metadata.component.target.dependencies]
"tegmentum:compression-multiplexer" = { path = "wit/deps/compression-multiplexer" }
